	  the USB HID keyboard report data.
	* configs/mcu123-214x/nsh:  Converted to use the kconfig-frontends
	  configuration tool.
	* configs/zp214xpa:  Add basic support for the The0.net ZP213x/4xPA
	  board (with the LPC2148 and the UG_2864AMBAG01).
	* configs/sim/nxlines:  Add an nxlines configuration for the
	  simulator.
	* configs/zp214xpa/nxlines:  Add an nxlines configuration for the
	  ZP213x/4xPA (with the LPC2148 and the UG_2864AMBAG01).  Working
	  as of 2012-12-30.
	* configs/olimex-lpc1766stk/wlan:  Remove non-functional
	  configuration.
	* configs/stm32f4discovery/src and nuttx/drivers/lcd/ug-2864hsweg01.c:
	  Updates and correctinos for the UG-2864HSWEG01 from Darcy Gong.
	* configs/lm326965-ek:  All configurations converted to use the
	  kconfig-frontends configuration tool.
	* configs/Kconfig: NSH_MMCSDSPIPORTNO should depend on MMCSD_SPI,
	  not just SPI (from Jose Pablo Carballo).
	* arch/arm/src/arm/Kconfig and armv7m/Kconfig:  Add an option for
	  buildroot toolchains:  They may be EABI or OABI.
	* include/nuttx/progmem and arch/arm/src/stm32/stm32_flash.c:
	  Fix a counting bug plus change interface to use either relative
	  or absolut FLASH addressing (from Freddie Chopin).
	* libc/misc/Make.defs:  Fix error in conditional for KBD CODEC.
	* libc/Kconfig and configs/*/defconfig (several):  The default
	  setting should be CONFIG_LIB_KBDCODEC=n
	* tools/configure.c:  configure.c can be used to build a work-alike
	  program as a replacement for configure.sh.  This work-alike
	  program would be used in environments that do not support Bash
	  scripting (such as the Windows native environment).
	* tools/configure.bat: configure.bat is a small Windows batch
	  file that can be used as a replacement for configure.sh in a
	  Windows native environment.  configure.bat is actually just a
	  thin layer that execuates configure.exe if it is available. If
	  configure.exe is not available, then configure.bat will attempt
	  to build it first.