@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: December 28, 2012</p>
+      <p>Last Updated: January 4, 2012</p>
     </td>
   </tr>
 </table>
