@@ -1,4 +1,4 @@
-NuttX TODO List (Last updated December 20, 2012)
+NuttX TODO List (Last updated January 4, 2013)
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 This file summarizes known NuttX bugs, limitations, inconsistencies with 
